# cmake

./: CMakeLists.txt  main.cpp
include/: calc.hpp
lib/: CMakeLists.txt  wifi.cpp  wifi.hpp
src/: calc.cpp
